[package]
name = "lifx-tool"
version = "0.1.0"
authors = ["William Young <wil.wyo@gmail.com>"]
edition = "2018"
description = "A cli tool and bridge implementing the lifx lan protocol v2.0"

[dependencies]
anyhow = "^1.0"
lifx-core = "^0.2"
log = "^0.4"
serde = "^1.0"
simplelog = "^0.9"
structopt = "^0.3"
thiserror = "^1.0"
