[package]
name = "lifx-tool"
version = "0.1.0"
authors = ["William Young <wil.wyo@gmail.com>"]
edition = "2018"
description = "A cli tool and bridge implementing the lifx lan protocol v2.0"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
anyhow = "^1.0"
lazy_static = "^1.4"
lifx-core = "^0.2"
log = "^0.4"
serde = "^1.0"
simplelog = "^0.9"
structopt = "^0.3"
thiserror = "^1.0"
